Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/EnumMembersOrder.out
EnumMembersOrder.java:11:16: compiler.err.expected: ')'
EnumMembersOrder.java:11:18: compiler.err.expected3: ',', '}', ';'
EnumMembersOrder.java:11:20: compiler.err.enum.constant.expected
3 errors
